<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_articles_default"
        android:inputType="number"
        android:key="@string/settings_min_articles_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_articles_label" />

    <MultiSelectListPreference
        android:defaultValue="@array/cat_section_default_values"
        android:entries="@array/cat_section_labels"
        android:entryValues="@array/cat_section_values"
        android:key="@string/cat_sections_key"
        android:title="@string/article_category_label" />

</PreferenceScreen>
